Save versification with MyNote and Bookmark